# receqif

./: .drone.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: categories.rs  convert.rs  import.rs  main.rs  monitoring.rs  receipt.rs  telegram.rs  tgusermanager.rs  ui.rs  user.rs
tests/resources/: test.json
