[package]
name = "receqif"
version = "0.1.0"
authors = ["Slava Barinov <rayslava@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qif_generator = "0.1.6"
chrono = "0.4"
pickledb = "0.4.1"
csv = "1.1"
structopt = "0.3"
shellexpand = "2.1"
radix_trie = { version = "0.2", features = ["serde"] }
libc = { version = "0.2" }
const_format = "0.2"
futures = { version = "0.3.0", optional = true }
teloxide = { version = "0.4.0", features = ["auto-send", "macros", "bincode-serializer"], optional = true }
log = { version = "0.4.8", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"], optional = true }
derive_more = { version = "0.99.13", optional = true }
thiserror = { version = "1.0.24", optional = true }
rustyline = "9.1.1"
rustyline-derive = "0.6.0"

[build-dependencies]
cc = { version = "1.0", optional = true }
pkg-config = { version = "0.3", optional = true }

[features]
default = [ "telegram" ]
tv = [ "cc", "pkg-config" ]
telegram = [ "teloxide", "log", "pretty_env_logger", "tokio", "derive_more", "thiserror", "futures" ]